[package]
name = "fractal"
version = "0.1.0"
authors = ["Ezequiel Garcia <ezequiel@collabora.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34"
threadpool = "1.8.1"
num = "0.4.0"
num_cpus = "1.13.0"
